# potens-cli

./: README.md  pyproject.toml
potens_cli/: __main__.py
potens_cli/cli/: printer.py
potens_cli/codebase/: search.py  stream.py
potens_cli/config/: urls.py
